# corel

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile
src/: main.c
